--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,10 @@ aws-sdk-route53 = "1.14.0"
 chrono = "0.4.33"
 dotenv = "0.15.0"
 tokio = { version = "1", features = ["full"] }
+
+[profile.release]
+opt-level = 'z'     # Optimize for size
+lto = true          # Enable link-time optimization
+codegen-units = 1   # Reduce number of codegen units to increase optimizations
+panic = 'abort'     # Abort on panic
+strip = true        # Strip symbols from binary*
