--- a/src/.github/workflows/ci.yml
+++ b/src/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ on:
 jobs:
   build:
     name: unallocated - latest
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    if: github.ref == 'refs/heads/develop'
     strategy:
       matrix:
         toolchain:
