--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ chrono = "0.4.33"
 dotenv = "0.15.0"
 tokio = { version = "1", features = ["full"] }
 
+reqwest = "0.11.13" 
+serde_json = "1.0.113"
+serde = { version = "1", features = ["derive"] }
+
+
 [profile.release]
 opt-level = 'z'     # Optimize for size
 lto = true          # Enable link-time optimization
