--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { version = "1", features = ["behavior-version-latest"] }
+aws-config = { version = "1.1.6", features = ["behavior-version-latest"] }
 aws-sdk-ec2 = "1.18.0"
+aws-credential-types = "1.1.6"
 
 aws-sdk-route53 = "1.14.0"
-chrono = "0.4.33"
 dotenv = "0.15.0"
 tokio = { version = "1", features = ["full"] }
 
